# BoneSimulation-cpp

./: CMakeLists.txt  LICENSE  README.md
data/: bone.inp
data/bigdataset/: slice_0000.tif  slice_0001.tif  slice_0002.tif  slice_0003.tif  slice_0004.tif  slice_0005.tif  slice_0006.tif  slice_0007.tif  slice_0008.tif  slice_0009.tif  slice_0010.tif  slice_0011.tif  slice_0012.tif  slice_0013.tif  slice_0014.tif  slice_0015.tif  slice_0016.tif  slice_0017.tif  slice_0018.tif  slice_0019.tif  slice_0020.tif  slice_0021.tif  slice_0022.tif  slice_0023.tif  slice_0024.tif  slice_0025.tif  slice_0026.tif  slice_0027.tif  slice_0028.tif  slice_0029.tif  slice_0030.tif  slice_0031.tif  slice_0032.tif  slice_0033.tif  slice_0034.tif  slice_0035.tif  slice_0036.tif  slice_0037.tif  slice_0038.tif  slice_0039.tif  (+651 more)
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
scripts/: build.sh  install_deps_arch.sh  run_docker.sh
src/: CMakeLists.txt  main.cpp
src/core/: block_extraction.cpp  block_extraction.hpp  calculix_export.cpp  calculix_export.hpp  cluster_analysis.cpp  cluster_analysis.hpp  image_loading.cpp  image_loading.hpp  image_processing.cpp  image_processing.hpp  mesh_generation.cpp  mesh_generation.hpp  reporting.cpp  reporting.hpp
src/utils/: file_io.cpp  file_io.hpp  logger.cpp  logger.hpp
